--- a/index.html
+++ b/index.html
@@ -338,6 +338,19 @@
     directionalLight.position.set(1, 1, 1);
     scene.add(directionalLight);
 
+    const _isInBody = p => {
+      const hmdEuler = localEuler.setFromQuaternion(camera.quaternion, camera.rotation.order);
+      hmdEuler.x = 0;
+      hmdEuler.z = 0;
+      const hmdQuaternion = localQuaternion.setFromEuler(hmdEuler);
+      const bodyPosition = localVector.copy(camera.position)
+        .add(
+          localVector2.set(0, -0.4, 0.2)
+            .applyQuaternion(hmdQuaternion)
+        );
+      return p.distanceTo(bodyPosition) < 0.35;
+    };
+
     const controllerMeshes = [null, null];
     const lastPresseds = [false, false];
     const lastMenuPresseds = [false, false];
@@ -1672,10 +1685,34 @@
             );
             if (targetObject) {
               grabbedObjects[controllerIndex] = targetObject;
+            } else if (_isInBody(controllerMesh.position)) {
+              const fileObject = (() => {
+                const object = new THREE.Object3D();
+
+                _requestSpriteMesh('file')
+                  .then(spriteMesh => {
+                    object.add(spriteMesh);
+                  })
+                  .catch(err => {
+                    console.warn(err.stack);
+                  });
+
+                return object;
+              })();
+              scene.add(fileObject);
+              fileMeshes.push(fileObject);
+
+              grabbedObjects[controllerIndex] = fileObject;
             }
           } else if (!grabbed && lastGrabbed) {
             const grabbedObject = grabbedObjects[controllerIndex];
+
             if (grabbedObject) {
+              if (_isInBody(controllerMesh.position)) {
+                scene.remove(grabbedObject);
+                fileMeshes.splice(fileMeshes.indexOf(grabbedObject), 1);
+              }
+
               grabbedObjects[controllerIndex] = null;
             }
           }
