Refactor script includes

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <canvas id=canvas></canvas>
   <div id=container></div>
   <script src="js/three.js"></script>
+  <script src="js/OBJLoader.js"></script>
+  <script src="js/FBXLoader.js"></script>
+  <script src="js/inflate.min.js"></script>
   <script src="js/vr-display.js"></script>
   <script src="js/skin.js"></script>
   <script src="js/sprite3d.js"></script>
-  <script src="js/OBJLoader.js"></script>
   <script src="js/ScreenQuad.js"></script>
   <script src="js/keycode.js"></script>
   <script src="js/svg-boundings.js"></script>
