Add and include new model.js

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/inflate.min.js"></script>
   <script src="js/vr-display.js"></script>
   <script src="js/skin.js"></script>
+  <script src="js/model.js"></script>
   <script src="js/sprite3d.js"></script>
   <script src="js/ScreenQuad.js"></script>
   <script src="js/keycode.js"></script>
