Include three-ik lib in index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="js/OBJLoader.js"></script>
   <script src="js/FBXLoader.js"></script>
   <script src="js/inflate.min.js"></script>
+  <script src="js/three-ik.js"></script>
   <script src="js/vr-display.js"></script>
   <script src="js/skin.js"></script>
   <script src="js/model.js"></script>
