--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="js/FBXLoader.js"></script>
   <script src="js/inflate.min.js"></script>
   <script src="js/three-ik.js"></script>
+  <script src="js/fetch-manager.js"></script>
   <script src="js/vr-display.js"></script>
   <script src="js/skin.js"></script>
   <script src="js/model.js"></script>
