Source tar/untar libs in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="js/three-ik.js"></script>
   <script src="js/fetch-manager.js"></script>
   <script src="js/vr-display.js"></script>
+  <script src="js/tar.js"></script>
+  <script src="js/untar.js"></script>
   <script src="js/skin.js"></script>
   <script src="js/model.js"></script>
   <script src="js/sprite3d.js"></script>
