--- a/index.html
+++ b/index.html
@@ -1818,6 +1818,8 @@
                               .then(object => {
                                 object.position.copy(placementPosition);
                                 scene.add(object);
+
+                                _animate(object.animate);
                               })
                               .catch(err => {
                                 console.warn(err.stack);
