--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     };
 
     const REGISTRY_QUERY_URL = 'https://registry.webmr.io/q';
+    const DEFAULT_USER_HEIGHT = 1.6;
     const DEFAULT_SKIN_URL = 'img/skins/male.png';
     const SIDES = ['left', 'right'];
     const FLOOR_SIZE = 20;
@@ -164,7 +165,7 @@
     localEuler.order = 'YXZ';
 
     const camera = new THREE.PerspectiveCamera(90, window.innerWidth / window.innerHeight, 0.1, 10 * 1024);
-    camera.position.set(0, 1, 1);
+    camera.position.set(0, DEFAULT_USER_HEIGHT, 1);
     camera.rotation.order = 'YXZ';
 
     const fakeDisplay = window.navigator.createVRDisplay();
